fixes some spacing issues on results summary

--- a/sass/partials/search/_basic-results.scss
+++ b/sass/partials/search/_basic-results.scss
@@ -20,8 +20,8 @@
     line-height: 1.3;
     margin-bottom: 5px;
     @media (min-width: 1200px) {
-      line-height: 1.5;
-      word-spacing: 3px;
+      line-height: 1.4;
+      word-spacing: 2px;
     }
   }
 
